--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "xxgbrl",
     "version": "5.0.0",
-    "description": "bot whatsapp by xxgbrl",
+    "description": "whatsapp bot",
     "main": "index.js",
     "type": "module",
     "directories": {
@@ -37,6 +37,7 @@
     "dependencies": {
         "@adiwajshing/baileys": "npm:@whiskeysockets/baileys@6.2.1",
         "@adiwajshing/keyed-db": "^0.2.4",
+        "@xct007/frieren-scraper": "npm:@xct007/frieren-scraper",
         "@arugaz/ai2d": "^1.0.1-z.8",
         "@bochilteam/scraper": "4.0.22-alpha.0",
         "@ibaraki-douji/pixivts": "*",
@@ -105,4 +106,4 @@
         "yt-search": "^2.10.4",
         "zs-extract": "^1.4.2"
     }
-}
+    }
